Se agrego contenido adicional a la plataforma

--- a/index.html
+++ b/index.html
@@ -205,6 +205,60 @@
       </div>
     </section>
 
+    <!--- SOBRE NOSOTROS --->
+    <section class="about" id="about">
+        <div class="about-img">
+          <img src="img/icons/pollos-ibc-icon.png" width="658px" height="678" />
+        </div>
+  
+        <div class="about-text">
+          <h3 class="green-title">Sobre nosotros</h3>
+          <h2>Somos Sabor</h2>
+          <p>
+            Ofreciendo los mejores servicios de comida rapida y con el mejor sazón
+            a las familias Dominicanas.
+          </p>
+        </div>
+      </section>
+  
+      <!-- MENÚ PICA POLLO -->
+  
+      <section class="menu blog" id="menu">
+        <div class="center-text">
+          <h3 class="green-title">Menú</h3>
+          <h2>Piezas De Pollo</h2>
+        </div>
+  
+        <div class="box-content">
+          <div class="main">
+            <img src="img/foods/fried-chicken/crispy-fried-chicken.jpg" />
+            <div class="box-text">
+              <h4>Piezas De Pollo</h4>
+              <p>Tradicional Crispy</p>
+              <h6>RD$300</h6>
+            </div>
+          </div>
+  
+          <div class="main">
+            <img src="img/foods/fried-chicken/crispy-fried-chicken.jpg" />
+            <div class="box-text">
+              <h4>Piezas De Pollo</h4>
+              <p>Tradicional Crispy</p>
+              <h6>RD$250</h6>
+            </div>
+          </div>
+  
+          <div class="main">
+            <img src="img/foods/fried-chicken/crispy-fried-chicken.jpg" />
+            <div class="box-text">
+              <h4>Piezas De Pollo</h4>
+              <p>Tradicional Crispy</p>
+              <h6>RD$250</h6>
+            </div>
+          </div>
+        </div>
+      </section>
+
     <!-- MENÚ PECHURINA -->
 
     <section class="menu" id="pechurina">
