--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       type="image/icon type"
     />
     <link rel="stylesheet" href="./css/carousel.css" />
-
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/preloader.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link
